@@ -94,6 +94,27 @@ int mcs51_nRegs = 16;
 static void spillThis (symbol *);
 static void freeAllRegs ();
 
+
+int
+mcs51_regname_to_idx (const char* reg_name)
+{
+  if (reg_name == NULL || *reg_name == '\0')
+    return -1;
+
+  for (int i = 0; i < END_IDX; ++i)
+    {
+       if (regs8051[i].name)
+         if (!strncmp (reg_name, regs8051[i].name, strlen(regs8051[i].name)))
+            return i;
+
+       if (regs8051[i].dname)
+         if (!strncmp (reg_name, regs8051[i].dname, strlen(regs8051[i].dname)))
+            return i;
+    }
+
+  return -1;
+}
+
 /*-----------------------------------------------------------------*/
 /* allocReg - allocates register of given type                     */
 /*-----------------------------------------------------------------*/
